cmake_minimum_required(VERSION 3.19)
project(HttpLibDump)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
include_directories(src inc vendor vendor/minhook vendor/minhook/include vendor/httplib)
add_subdirectory(vendor/minhook)
set(SOURCE src/main.cpp src/scan.cpp)
add_library(HttpLibDump SHARED ${SOURCE})
target_link_libraries(HttpLibDump minhook)