cmake_minimum_required(VERSION 3.19)
project(TestApp)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_definitions(-D_CRT_SECURE_NO_WARNINGS -DCPPHTTPLIB_OPENSSL_SUPPORT)
include_directories(src inc vendor/httplib)
if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "8")
    include_directories(AFTER vendor/openssl/x64/Release/include)
    link_directories(vendor/openssl/x64/Release/lib)
else()
    include_directories(AFTER vendor/openssl/x32/Release/include)
    link_directories(vendor/openssl/x32/Release/lib)
endif("${CMAKE_SIZEOF_VOID_P}" STREQUAL "8")
add_executable(TestApp src/main.cpp)
target_link_libraries(TestApp libcrypto libssl)